auth edits
